clusters/sirius/apps/ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: ollama
    app.kubernetes.io/name: ollama
  annotations:
    cert-manager.io/cluster-issuer: default-clusterissuer
  name: ollama-ingress
spec:
  tls:
  - hosts:
    - ollama.sirius.moonblade.work
    secretName: ollama-cert
  rules:
  - host: ollama.sirius.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ollama
            port:
              number: 11434
